--- a/antismash/outputs/html/top_header.html
+++ b/antismash/outputs/html/top_header.html
@@ -11,13 +11,13 @@
     <div id="downloadmenu">
       <ul id="downloadoptions">
         {% for record in records %}
-        <li><a href={{record.seq_id}}.zip>Download all results</li>
+        <li><a href={{record.id}}.zip>Download all results</li>
           {% if config.input_type == 'nucl' %}
-            <li><a href={{record.seq_id}}.geneclusters.xls> Download XLS overview file</a></li>
-            <li><a href={{record.seq_id}}.final.embl> Download EMBL summary file</a></li>
-            <li><a href={{record.seq_id}}.final.gbk> Download GenBank summary file</a></li>
+            <li><a href={{record.id}}.geneclusters.xls> Download XLS overview file</a></li>
+            <li><a href={{record.id}}.final.embl> Download EMBL summary file</a></li>
+            <li><a href={{record.id}}.final.gbk> Download GenBank summary file</a></li>
           {% else %}
-            <li><a href={{record.seq_id}}.final.gp> Download GenPept summary file</a></li>
+            <li><a href={{record.id}}.final.gp> Download GenPept summary file</a></li>
           {% endif %}
           {% if options.logfile and options.download_logfile() != None %}
             <li><a href={{options.download_logfile()}}> Download log file</a></li>
