common: (re)move last of deprecated functions

--- a/antismash/outputs/html/top_header.html
+++ b/antismash/outputs/html/top_header.html
@@ -1,7 +1,7 @@
 <div class="top-header">
   <img class="antismash-logo" src="images/{{options.taxon}}_logo.png" alt="antiSMASH">
   <span class="antismash-title"><a class="main-link" href="{{options.base_url}}">antibiotics & Secondary Metabolite Analysis SHell</a><br>
-    <span class="white">Version <span id="antismash-version">{{utils.get_version()}}</span></span>
+    <span class="white">Version <span id="antismash-version">{{version}}</span></span>
   </span>
   <div id="icons">
     <a class="main-link" href="{{options.base_url}}"><img src="images/{{options.taxon}}_home.png" alt="home" title="Go to start page"></a>
