- Replace Indigo by SmilesDrawer

--- a/antismash/outputs/html/index.html
+++ b/antismash/outputs/html/index.html
@@ -8,6 +8,7 @@
   <script src="js/jsdomain.js"></script>
   <script src="js/clusterblast.js"></script>
   <script src="geneclusters.js"></script>
+  <script src="js/smiles-drawer.min.js"></script>
   <script src="js/jnj.js"></script>
 
   {% for record in records %}
