--- a/antismash/outputs/html/top_header.html
+++ b/antismash/outputs/html/top_header.html
@@ -10,14 +10,11 @@
     <a href="#" id="download"><img src="images/{{options.taxon}}_download.png" alt="download" title="Download results"></a>
     <div id="downloadmenu">
       <ul id="downloadoptions">
-        {% for record in records %}
-        <li><a href={{record.id}}.zip>Download all results</a></li>
-          <li><a href={{record.id}}.final.embl> Download EMBL summary file</a></li>
-          <li><a href={{record.id}}.final.gbk> Download GenBank summary file</a></li>
-          {% if options.logfile and options.download_logfile() != None %}
-            <li><a href={{options.download_logfile()}}> Download log file</a></li>
-          {% endif %}
-        {% endfor %}
+        <li><a href={{options.input_file}}.zip>Download all results</a></li>
+        <li><a href={{options.input_file}}.gbk> Download GenBank summary file</a></li>
+        {% if options.logfile and options.download_logfile() != None %}
+          <li><a href={{options.download_logfile()}}> Download log file</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
