html: don't link to a non-existant zipfile

--- a/antismash/outputs/html/top_header.html
+++ b/antismash/outputs/html/top_header.html
@@ -10,7 +10,9 @@
     <a href="#" id="download"><img src="images/{{options.taxon}}_download.png" alt="download" title="Download results"></a>
     <div id="downloadmenu">
       <ul id="downloadoptions">
+        {% if not options.skip_zip_file %}
         <li><a href={{options.input_file}}.zip>Download all results</a></li>
+        {% endif %}
         <li><a href={{options.input_file}}.gbk> Download GenBank summary file</a></li>
         {% if options.logfile and options.download_logfile() != None %}
           <li><a href={{options.download_logfile()}}> Download log file</a></li>
