all: use HTTPS for all secondarymetabolite.org links

--- a/antismash/outputs/html/footer.html
+++ b/antismash/outputs/html/footer.html
@@ -31,6 +31,6 @@
     </table>
   </div>
   <div id="copyright">
-    If you have found antiSMASH useful, please <a href="http://antismash.secondarymetabolites.org/about">cite us</a>.
+    If you have found antiSMASH useful, please <a href="https://antismash.secondarymetabolites.org/about">cite us</a>.
   </div>
 </div>
