clusterblast: fix output table links

--- a/antismash/outputs/html/html_table.html
+++ b/antismash/outputs/html/html_table.html
@@ -64,7 +64,7 @@ table {
           <tr>
               <td>{{line.gene_id}}</td>
               <td>{{line.gene_description}}</td>
-              <td><a href="https://mibig.secondarymetabolites.org/repository/%s/index.html#cluster-1">{{line.mibig_id}}</a></td>
+              <td><a href="https://mibig.secondarymetabolites.org/go/{{line.mibig_id}}/{{line.mibig_cluster_number}}">{{line.mibig_id}}</a></td>
               <td>{{line.mibig_product}}</td>
               <td>{{line.percent_id}}</td>
               <td>{{line.coverage}}</td>
