--- a/antismash/outputs/html/jnj_generator.html
+++ b/antismash/outputs/html/jnj_generator.html
@@ -42,6 +42,9 @@
         {{le.legend('legend-type-biosynthetic-additional', 'additional biosynthetic genes')}}
         {{le.legend('legend-type-transport', 'transport-related genes')}}
         {{le.legend('legend-type-regulatory', 'regulatory genes')}}
+        {% if options.resfam %}
+          {{le.legend('legend-type-resistance', 'resistance genes')}}
+        {% endif %}
         {{le.legend('legend-type-other', 'other genes')}}
         {% if (options.tta_enabled or not options.minimal) and record.get_gc_content() >= options.tta_threshold %}
             {{le.legend('legend-tta-codon', 'TTA codon')}}
