html: fix cluster-type links to docs glossary

--- a/antismash/outputs/html/index.html
+++ b/antismash/outputs/html/index.html
@@ -86,7 +86,7 @@
                 <td>
                   {% set dash = joiner("-") %}
                   {% for subtype in region.products -%}
-                    {{dash()}}<a href="https://antismash.secondarymetabolites.org/help#{{subtype}}" target="_blank">{{subtype | title}}</a>
+                    {{dash()}}<a href="https://docs.antismash.secondarymetabolites.org/glossary/#{{subtype}}" target="_blank">{{subtype | title}}</a>
                   {%- endfor %}
 
                 </td>
