--- a/antismash/outputs/html/jnj_generator.html
+++ b/antismash/outputs/html/jnj_generator.html
@@ -1,14 +1,15 @@
 {% import 'legend_entry_macro.html' as le %}
 
 {% for record in records %}
+{% set results = results_by_record_id[record.id] %}
 {% for region in record.regions %}
 <div class= "page" id='{{region.anchor_id}}'>
   <h3> {{record.seq_record.name}} - Region {{region.get_region_number()}} - {{region.get_product_string() | capitalize }}</h3>
   {% if region.has_sidepanel %}
   <div class="sidepanel">
     {% for handler in region.handlers %}
-      {% if handler.generate_sidepanel is defined and handler.__name__ in record.results %}
-        {{handler.generate_sidepanel(region, record.results[handler.__name__], record, options) | safe }}
+      {% if handler.generate_sidepanel is defined and handler.__name__ in results %}
+        {{handler.generate_sidepanel(region, results[handler.__name__], record, options) | safe }}
       {% endif %}
     {% endfor %}
   </div>
@@ -53,8 +54,8 @@
       </div>
     </div>
     {% for handler in region.handlers %}
-      {% if handler.generate_details_div is defined and handler.__name__ in record.results %}
-        {{handler.generate_details_div(region, record.results[handler.__name__], record, options) | safe}}
+      {% if handler.generate_details_div is defined and handler.__name__ in results %}
+        {{handler.generate_details_div(region, results[handler.__name__], record, options) | safe}}
       {% endif %}
     {% endfor %}
   </div>
