change cluster locations in html overview table to bio_start/bio_end
Cluster locations in the overview are now updated for cross-origin clusters

--- a/antismash/outputs/html/index.html
+++ b/antismash/outputs/html/index.html
@@ -90,8 +90,8 @@
                   {%- endfor %}
 
                 </td>
-                <td class="digits">{{cluster.location.start + 1}}</td>
-                <td class="digits">{{cluster.location.end}}</td>
+                <td class="digits">{{cluster.location.bio_start + 1}}</td>
+                <td class="digits">{{cluster.location.bio_end}}</td>
                 <td>{{cluster.best_knowncluster_name}}</td>
                 {% set similarity = cluster.best_knowncluster_similarity %}
                 {% if similarity > 75 %}
