--- a/antismash/outputs/html/index.html
+++ b/antismash/outputs/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <script src="js/jquery.js"></script>
   <script src="js/purl.js"></script>
-  <script src="js/d3.v2.js"></script>
+  <script src="js/d3.v5.min.js"></script>
   <script src="js/svgene.js"></script>
   <script src="js/jsdomain.js"></script>
   <script src="js/clusterblast.js"></script>
