html: remove redundant jquery libs

--- a/antismash/outputs/html/html_table.html
+++ b/antismash/outputs/html/html_table.html
@@ -1,20 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 
 <head>
 <link rel="stylesheet" type="text/css" href="../../css/style.css">
-<!-- js section -->
-<!-- jQuery  -->
-<script type="text/javascript"
-        src="../../js/jquery-1.10.2.min.js"></script>
 
+<script type="text/javascript" src="../../js/jquery.js"></script>
 <script type="text/javascript" src="../../js/jquery.tablesorter.min.js"></script>
-
-<script type="text/javascript" src="../../js/jquery.tmpl-1.0.0pre.js"></script>
-
-  <!-- jQuery UI Support -->
-<script type="text/javascript"
-        src="../../js/jquery-ui-1.10.4.custom.min.js"></script>
 
 <script type="text/javascript" >
 var counter = 1;
