--- a/antismash/outputs/html/html_table.html
+++ b/antismash/outputs/html/html_table.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+<meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="../../css/style.css">
 
 <script type="text/javascript" src="../../js/jquery.js"></script>
@@ -34,6 +35,7 @@ table {
 }
 </style>
 </head>
+<body>
     <table id="myTable" class="tablesorter" border=1>
     <thead>
     <tr>
@@ -55,10 +57,11 @@ table {
               <td><a href="https://mibig.secondarymetabolites.org/go/{{line.mibig_id}}/{{line.mibig_cluster_number}}">{{line.mibig_id}}</a></td>
               <td>{{line.mibig_product}}</td>
               <td>{{line.percent_id}}</td>
-              <td>{{line.coverage}}</td>
+              <td>{{"%.1f" % line.coverage}}</td>
               <td>{{line.blast_score}}</td>
               <td>{{line.evalue}}</td>
           </tr>
     {% endfor %}
     </tbody>
   </table>
+</body>
