--- a/antismash/outputs/html/footer.html
+++ b/antismash/outputs/html/footer.html
@@ -1,36 +1,13 @@
-<div id="footer">
-  <div id="logos">
-    <table id="logo-table">
-      <tr>
-        <td>
-          <img src="images/tueblogo.gif">
-        </td>
-        <td>
-          <img src="images/ruglogo.gif">
-        </td>
-        <td>
-          <img src="images/ucsflogo.gif">
-        </td>
-        <td>
-          <img src="images/wur-logo.png">
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <img src="images/uomlogo.jpg">
-        </td>
-        <td>
-          <img src="images/dziflogo.png">
-        </td>
-        <td>
-          <img src="images/cfb-logo.png">
-        </td>
-        <td>
-        </td>
-      </tr>
-    </table>
-  </div>
-  <div id="copyright">
-    If you have found antiSMASH useful, please <a href="https://antismash.secondarymetabolites.org/about">cite us</a>.
-  </div>
-</div>
+  <footer class="footer">
+    <div class="container">
+      <div>
+        <img src="images/{{options.taxon}}_antismash_logo.svg" height="90px">
+      </div>
+      <div class="cite-me">
+        If you have found antiSMASH useful, please <a href="{{options.base_url}}#!/about">cite us</a>.
+      </div>
+      <div>
+        <img src="images/{{options.taxon}}_antismash_icon.svg" height="100px">
+      </div>
+    </div>
+  </footer>
