html: make each focus panel per-region

--- a/antismash/outputs/html/jnj_generator.html
+++ b/antismash/outputs/html/jnj_generator.html
@@ -54,7 +54,7 @@
 
   <div class="focus-panel">
     <h3>Gene details</h3>
-    <div class="focus-panel-content" style="margin-left: 2em; margin-right: 2em; font-size: 0.8em; display: flex; flex-wrap: nowrap; flex-direction: column; justify-content: space-between; height: 95%">
+    <div class="focus-panel-content-{{region.anchor_id}}" style="margin-left: 2em; margin-right: 2em; font-size: 0.8em; display: flex; flex-wrap: nowrap; flex-direction: column; justify-content: space-between; height: 95%">
         <div style="text-align: center; margin-top: 30%;">
             Select a gene to view the details available for it
         </div>
