html: fix contact link

--- a/antismash/outputs/html/top_header.html
+++ b/antismash/outputs/html/top_header.html
@@ -25,6 +25,6 @@
       </div>
       <div class="ancillary-link"><a href="{{options.base_url}}#!/about"><img src="images/about.svg" alt="about"> &nbsp; About</a></div>
       <div class="ancillary-link"><a href="https://docs.antismash.secondarymetabolites.org"><img src="images/help.svg" alt="help"> &nbsp; Help</a></div>
-      <div class="ancillary-link"><a href="#!/contact"><img src="images/contact.svg" alt="contact"> &nbsp; Contact</a></div>
+      <div class="ancillary-link"><a href="{{options.base_url}}#!/contact"><img src="images/contact.svg" alt="contact"> &nbsp; Contact</a></div>
     </div>
   </nav>
