--- a/antismash/outputs/html/top_header.html
+++ b/antismash/outputs/html/top_header.html
@@ -11,6 +11,7 @@
         </a>
       </div>
     </div>
+    <div class="custom-description">{{options.html_description}}</div>
     <div class="ancillary-links">
       <div class="ancillary-link dropdown-menu" id="download-dropdown"><a href="#" id="download-dropdown-link"><img src="images/download.svg" alt="download"> &nbsp; Download</a>
         <ul class="dropdown-options">
